tests/unit/default/syntax-error/171-alter-table-dot-column-to.x.t
---- IN ----
*%table.name:int=>|
---- OUT ----
---- ERR ----
syntax: expected `:` after `...name:int=>` near `|` at position 18 - at line 1
---- EXIT ----
1
